--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,10 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>3.0.9</version>
+		</dependency>
 	</dependencies>
 </project>
