--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.kreatious.pianoleopard</groupId>
     <artifactId>pianoleopard</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>A utility for learning how to play the piano</description>
     <url>http://gstuder.github.io/piano-leopard</url>
@@ -42,7 +41,8 @@
         <connection>scm:git:https://github.com/GStuder/piano-leopard.git</connection>
         <developerConnection>scm:git:git@github.com:GStuder/piano-leopard.git</developerConnection>
         <url>https://github.com/GStuder/piano-leopard</url>
-    </scm>
+      <tag>1.0</tag>
+  </scm>
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/GStuder/piano-leopard/issues</url>
@@ -169,8 +169,8 @@
                 </executions>
                 <configuration>
                     <rules>
-                        <requireReleaseDeps></requireReleaseDeps>
-                        <dependencyConvergence></dependencyConvergence>
+                        <requireReleaseDeps />
+                        <dependencyConvergence />
                         <requireJavaVersion>
                             <version>[1.8,)</version>
                         </requireJavaVersion>
