--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.kreatious.pianoleopard</groupId>
     <artifactId>pianoleopard</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>A utility for learning how to play the piano</description>
     <url>http://gstuder.github.io/piano-leopard</url>
@@ -41,7 +41,7 @@
         <connection>scm:git:https://github.com/GStuder/piano-leopard.git</connection>
         <developerConnection>scm:git:git@github.com:GStuder/piano-leopard.git</developerConnection>
         <url>https://github.com/GStuder/piano-leopard</url>
-      <tag>HEAD</tag>
+      <tag>1.1</tag>
   </scm>
     <issueManagement>
         <system>GitHub Issues</system>
