--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.kreatious.pianoleopard</groupId>
     <artifactId>pianoleopard</artifactId>
@@ -41,8 +42,8 @@
         <connection>scm:git:https://github.com/GStuder/piano-leopard.git</connection>
         <developerConnection>scm:git:git@github.com:GStuder/piano-leopard.git</developerConnection>
         <url>https://github.com/GStuder/piano-leopard</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/GStuder/piano-leopard/issues</url>
@@ -233,6 +234,9 @@
             <plugin>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.4</version>
+                <configuration>
+                    <skipDeploy>true</skipDeploy>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
